syntax = "proto3";

package til;

service TilService {
  rpc Ping(PingRequest) returns (PingResponse){}
}

message PingRequest {}

message PingResponse {
  string response = 1;
}
